--- a/index.html
+++ b/index.html
@@ -1103,28 +1103,28 @@
 	<!-- ----------TOP EXPERIENCES SECTION----------- -->
 	<section>
 		<h1>Top experiences</h1>
-		<section id="experiences">
-			<a href="experience_bali.html">
-				<article class="experience-r experience col-11">
-					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
+		<section id="experiences" class="col-s-10">
+			<a href="experience_bali.html" class="col-t-4 col-11">
+				<article class="experience-r experience">
+					<img src="images/bali main img.png" class="col-s-12 col-t-12 col-4">
 					<div class="col-7">
 						<h3>Bali</h3>
 						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
 					</div>
 				</article>
 			</a>
-			<a href="experience_prague.html">
-				<article class="experience-l experience col-11">
+			<a href="experience_prague.html" class="col-t-4 col-11">
+				<article class="experience-l experience">
 					<div class="col-7">
 						<h3>Prague</h3>
 						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
 					</div>
-					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
+					<img src="images/prague main img.png" class="col-s-12 col-t-12 col-4">
 				</article>
 			</a>
-			<a href="experience_cies.html">
-				<article id='cies-exp' class="experience-r experience col-11">
-					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
+			<a href="experience_cies.html" class="col-t-4 col-11">
+				<article id='cies-exp' class="experience-r experience">
+					<img src="images/cies main img.png" class="col-s-12 col-t-12 col-4">
 					<div class="col-7">
 						<h3>Cies Islands</h3>
 						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
