--- a/my_exp.html
+++ b/my_exp.html
@@ -102,7 +102,7 @@
 		<p class="question">Are you sure you want to delete this experience?</p>
 		<form class="yes-no col-s-11 col-t-11 col-11">
 			<button type="button" name="no-exp" id="no-but-exp" class="submit-but col-s-3 col-t-3 col-3">No</button>
-			<button type="button" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3" onclick="deleteExp(this)">Yes</button>
+			<button type="button" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
 		</form>
 	</article>
 
@@ -320,23 +320,23 @@
 						<div class="img-remove">
 							<img src="images/prague_pic_1.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove-exp" id="remove" onclick="delete_exp()">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp_coll(this)">x</button>
 								<label class="b-contain">
 									<input type="checkbox" onclick="showAddColl(this)">
 									<div class="b-input"></div>
 								</label>
 							</div>
 						</div>
-						<h3 class="title-exp" id="default-tit">Prague at night</h3>
+						<h3 class="title-exp default-tit">Prague at night</h3>
 						<article class="interests-exp">
-							<div class="interest" id="interest-11">
-								<p id="inter-1">Europe</p>
+							<div class="interest interest-1">
+								<p class="inter-1">Europe</p>
 							</div>
-							<div class="interest" id="interest-12">
-								<p id="inter-2">City</p>
+							<div class="interest interest-2">
+								<p class="inter-2">City</p>
 							</div>
 						</article>
-						<button type="button" name="comments-experience" class="big-button small" id="comments">See comments</button>
+						<button type="button" name="comments-experience comments" class="big-button small">See comments</button>
 					</div>
 				</article>
 				<article class="general-exp" id="default-experience-1">
@@ -344,23 +344,23 @@
 						<div class="img-remove">
 							<img src="images/bali_pic_2.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove-exp" id="remove" onclick="delete_exp()">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp_coll(this)">x</button>
 								<label class="b-contain">
 									<input type="checkbox" onclick="showAddColl(this)">
 									<div class="b-input"></div>
 								</label>
 							</div>
 						</div>
-						<h3 class="title-exp" id="default-tit">Bike path - Bali</h3>
+						<h3 class="title-exp default-tit">Bike path - Bali</h3>
 						<article class="interests-exp">
-							<div class="interest" id="interest-11">
-								<p id="inter-1">Forest</p>
+							<div class="interest interest-1">
+								<p class="inter-1">Forest</p>
 							</div>
-							<div class="interest" id="interest-12">
-								<p id="inter-2">Asia</p>
+							<div class="interest interest-2">
+								<p class="inter-2">Asia</p>
 							</div>
 						</article>
-						<button type="button" name="comments-experience" class="big-button small" id="comments">See comments</button>
+						<button type="button" name="comments-experience" class="big-button small comments">See comments</button>
 					</div>
 				</article>
 			</article>
@@ -372,16 +372,16 @@
 				Create a new collection by selecting experiences</p>
 				<article class="experience-col collection" id="default-collection">
 					<div class="img-remove">
-						<img src="images/cies_pic_5.png" alt="" class="side-img-1">
-						<img src="images/cies_pic_5.png" alt="" class="center-img">
-						<img src="images/cies_pic_5.png" alt="" class="side-img-2">
+						<img src="images/bali_pic_3.png" alt="" class="side-img-1">
+						<img src="images/prague_pic_1.png" alt="" class="center-img">
+						<img src="images/bali_pic_2.png" alt="" class="side-img-2">
 						<div class="remove-select">
-							<button type="button" name="remove-collection" class="remove" id="remove-coll" onclick="delete_coll()">x</button>
+							<button type="button" name="remove-collection" class="remove remove-coll" onclick="delete_exp_coll(this)">x</button>
 						</div>
 					</div>
-					<h3 class="title-exp" id="default-tit">Default title</h3>
-					<p class="exp-p" id="experiences-inside">Default experience names</p>
-					<button type="button" name="comments-experience" class="big-button small" id="comments">See collection</button>
+					<h3 class="title-exp default-tit">Prague and Bali</h3>
+					<p class="exp-p experiences-inside">Prague at night <br>Bike path - Bali</p>
+					<button type="button" name="comments-experience" class="big-button small comments">See collection</button>
 				</article>
 			</article>
 		</div>
