--- a/my_exp.html
+++ b/my_exp.html
@@ -392,11 +392,10 @@
 		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png">
 			<h2 id='footer-title'>Travelust</h2>
-		</div>
-
-		<div id="footer-text" class='col-t-8 col-s-12'>
-			<div id="footer c">© 2021 Travelust</div>
-			<a href="privacy_policy.html">Privacy policy</a>
+			<div id="footer-text" class='col-t-8 col-s-12'>
+				<div id="footer c">© 2021 Travelust</div>
+				<a href="privacy_policy.html">Privacy policy</a>
+			</div>
 		</div>
 
 		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
@@ -409,4 +408,5 @@
 
 </body>
 </html>
+<script src="script/index.js" charset="utf-8"></script>
 <script src="script/my_exp.js" charset="utf-8"></script>
