--- a/about_us.html
+++ b/about_us.html
@@ -17,119 +17,150 @@
     <!-- ----------HEADER----------- -->
 
     <header class="clearfix">
-        <div id='header-main' class='col-t-12 col-s-12 col-12'>
-            <img class='col-s-2' id='show-menu' src="images/show-menu.png">
-            <img class="col-s-2 col-3" id='logo' src="images/logo.png">
-            <h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
-            <nav class='col-s-5 col-3' id='log-sign-frm'>
-                <button class="col-t-5" id='sign-btn'>Sign up</button>
-                <button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
-            </nav>
-        </div>
-        <nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
-            <a href="index.html">Home</a>
-            <a href="about_us.html">About</a>
-            <a href="last_experiences.html">Experiences</a>
-            <a href="plan.html">Plan</a>
-            <a href="top_users.html">Top users</a>
-            <nav id='log-sign-in-menu'>
-                <button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
-                <button class="col-s-5" id='log-in-menu-btn'>Log in</button>
-            </nav>
-        </nav>
-        <nav id='search-bar' class='col-t-3 col-4'>
-            <input type="text" id='search-input' name="search-input">
-            <img id='search-lupa' src="images/search_lupa.png">
-        </nav>
-    </header>
-    <ul id="myList" class="col-4">
-        <li><a href="last_experiences.html">Experiences</a></li>
-        <li><a href="top_users.html">Users</a></li>
-        <li><a href="experience_bali.html">Sacred monkey forest, Bali</a></li>
-        <li><a href="experience_prague.html">City tour, Prague</a></li>
-        <li><a href="experience_cies.html">Trip to Cies islands, Vigo</a></li>
-        <li><a href="about_us.html">About us</a></li>
-        <li><a href="privacy_policy.html">Privacy policy, terms, conditions</a></li>
-        <li><a href="index.html">Home, main page</a></li>
-        <li><a href="index.html">Map</a></li>
-        <li><a href="plan.html">Plan a trip</a></li>
-    </ul>
-    <!-- ----------END HEADER----------- -->
+  		<div id='header-main' class='col-t-12 col-s-12 col-12'>
+  			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
+  			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
+  			<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
+  			<nav class='col-s-5 col-4' id='log-sign-frm'>
+  				<div id="main-bts" class="col-s-12">
+  					<button class="col-t-5" id='sign-btn'>Sign up</button>
+  					<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
+  				</div>
+  				<div id="registered-bts" class="col-s-12">
+  					<img src="images/email%201.png" class="image_message" id="image_mes">
+  					<div class="col-s-5 col-4">
+  						<p class="col-s-8 text_username" id="username_show"></p>
+  						<img src="images/user.png">
+  					</div>
+  					<div class="col-s-5 col-8">
+  						<button class="col-s-12 col-5" id='profile-btn'>Profile</button>
+  						<button class="col-s-12 col-5" id='log-out-btn'>Log out</button>
+  					</div>
+  				</div>
+  			</nav>
+  		</div>
+  		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
+  			<a href="index.html">Home</a>
+  			<a href="about_us.html">About</a>
+  			<a href="last_experiences.html">Experiences</a>
+  			<a href="plan.html">Plan</a>
+  			<a href="top_users.html">Top users</a>
+  			<nav id='log-sign-in-menu'>
+  				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
+  				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
+  			</nav>
+  		</nav>
+  		<nav id='search-bar' class='col-t-3 col-4'>
+  			<input type="text" id='search-input' name="search-input">
+  			<img id='search-lupa' src="images/search_lupa.png">
+  		</nav>
+  	</header>
+  	<ul id="myList" class="col-4">
+  		<li><a href="last_experiences.html">Experiences</a></li>
+  		<li><a href="top_users.html">Users</a></li>
+  		<li><a href="experience_bali.html">Sacred monkey forest, Bali</a></li>
+  		<li><a href="experience_prague.html">City tour, Prague</a></li>
+  		<li><a href="experience_cies.html">Trip to Cies islands, Vigo</a></li>
+  		<li><a href="about_us.html">About us</a></li>
+  		<li><a href="privacy_policy.html">Privacy policy, terms, conditions</a></li>
+  		<li><a href="index.html">Home, main page</a></li>
+  		<li><a href="index.html">Map</a></li>
+  		<li><a href="plan.html">Plan a trip</a></li>
+  	</ul>
+  	<!-- ----------END HEADER----------- -->
 
-    <!-- ----------POP UPS----------- -->
-    <div id="main">
-        <!-- ----------SIGN UP----------- -->
-        <article class="popup col-s-7" id="sign-popup">
-            <div class="title-exit">
-                <h3>Create new account</h3>
-                <button type="button" name="exit" class="exit-button">x</button>
-            </div>
-            <form class="sign-info profile-info" id="signup-popup">
-                <div id="left" class="col-s-8">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" value="" class="input-sign col-s-8" id="name">
-                    <label for="username">Username</label>
-                    <input type="text" name="username" value="" class="input-sign col-s-8" id="username">
-                    <label for="email">Email Address</label>
-                    <input type="text" name="email" value="" class="input-sign col-s-8" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]">
-                    <label for="birth">New Birth Date</label>
-                    <input type="date" name="birth" class="input-sign col-s-8" id="birth">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}">
-                    <label for="password-confirm">Confirm Password</label>
-                    <input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}">
-                </div>
-                <div id="right" class="col-s-3">
-                    <img src="images/default_pfp.png" alt="current picture" class="col-s-6">
-                    <input type="file" id="hidden" class="input-sign" name="change picture">
-                    <label for="hidden" id="input-label">Select picture</label>
-                    <label for="interest">Interests</label>
-                    <div id="interests-remove">
-                        <div class="interest-to-choose" id="default-interest">
-                            <p>Interest 1</p>
-                        </div>
-                    </div>
-                    <form class="profile-info">
-                        <label for="inter">Choose an interest to add</label>
-                        <select name="inter" id="new-interest" class="col-s-5">
-                            <option selected disabled hidden></option>
-                            <option value="beach">Beach</option>
-                            <option value="exotic">Exotic</option>
-                            <option value="city">City</option>
-                            <option value="europe">Europe</option>
-                            <option value="africa">Africa</option>
-                            <option value="america">America</option>
-                            <option value="asia">Asia</option>
-                            <option value="forest">Forest</option>
-                            <option value="islands">Islands</option>
-                            <option value="budhist">Budhist</option>
-                            <option value="religious">Religious</option>
-                        </select>
-                        <button id="interest-btn">Add interest</button>
-                    </form>
-                </div>
-            </form>
-            <button type="submit" id="submit-sign" class="submit-but col-s-3">Submit</button>
-        </article>
-        <!-- ----------END SIGN UP----------- -->
+  	<!-- ----------POP UPS----------- -->
+  	<div id="main">
+  		<!-- ----------SIGN UP----------- -->
+  		<article class="popup col-s-7" id="sign-popup">
+  			<div class="title-exit">
+  				<h3>Create new account</h3>
+  				<button type="button" name="exit" class="exit-button">x</button>
+  			</div>
+  			<form class="sign-info profile-info" id="signup-popup">
+  				<div id="left" class="col-s-8">
+  					<label for="name">Name</label>
+  					<input type="text" name="name" value="" class="input-sign col-s-8" id="name" required>
+  					<label for="username">Username</label>
+  					<input type="text" name="username" value="" class="input-sign col-s-8" id="username" required>
+  					<label for="email">Email Address</label>
+  					<input type="text" name="email" value="" class="input-sign col-s-8" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]" required>
+  					<label for="birth">New Birth Date</label>
+  					<input type="date" name="birth" class="input-sign col-s-8" id="birth">
+  					<label for="password">Password</label>
+  					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}" required>
+  					<label for="password-confirm">Confirm Password</label>
+  					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}" required>
+  				</div>
+  				<div id="right" class="col-s-3">
+  					<img src="images/default_pfp.png" alt="current picture" class="col-s-6">
+  					<input type="file" id="hidden" class="input-sign" name="change picture">
+  					<label for="hidden" id="input-label">Select picture</label>
+  					<label for="interest">Interests</label>
+  					<div id="interests-remove">
+  						<div class="interest-to-choose" id="default-interest">
+  							<p>Interest 1</p>
+  						</div>
+  					</div>
+  					<form class="profile-info">
+  						<label for="inter">Choose an interest to add</label>
+  						<select name="inter" id="new-interest" class="col-s-5">
+  							<option selected disabled hidden></option>
+  							<option value="beach">Beach</option>
+  							<option value="exotic">Exotic</option>
+  							<option value="city">City</option>
+  							<option value="europe">Europe</option>
+  							<option value="africa">Africa</option>
+  							<option value="america">America</option>
+  							<option value="asia">Asia</option>
+  							<option value="forest">Forest</option>
+  							<option value="islands">Islands</option>
+  							<option value="budhist">Budhist</option>
+  							<option value="religious">Religious</option>
+  						</select>
+  						<button id="interest-btn">Add interest</button>
+  					</form>
+  				</div>
+  			</form>
+  			<button type="submit" id="submit-sign" class="submit-but col-s-3">Submit</button>
+  		</article>
+  		<!-- ----------END SIGN UP----------- -->
 
-        <!-- ----------LOG IN----------- -->
-        <article class="popup col-s-6" id="login-popup">
-            <div class="title-exit">
-                <h3>Log in</h3>
-                <button type="button" name="exit" class="exit-button">x</button>
-            </div>
-            <div class="inputs">
-                <form class="profile-info">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" value="" class="input-modify col-s-8" id="email-login">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" value="" class="input-modify col-s-8" id="password-login" pattern="[a-z0-9]{0,8}">
-                    <button type="submit" id="submit-login" class="submit-but col-s-3">Log in</button>
-                </form>
-                <p>You don’t have an account?<button id="link-sign"> Click here to sign up</button></p>
-            </div>
-        </article>
+  		<!-- ----------LOG IN----------- -->
+  		<article class="popup col-s-6" id="login-popup">
+  			<div class="title-exit">
+  				<h3>Log in</h3>
+  				<button type="button" name="exit" class="exit-button">x</button>
+  			</div>
+  			<div class="inputs">
+  				<form class="profile-info">
+  					<label for="email">Email</label>
+  					<input type="email" name="email" value="" class="input-modify col-s-8" id="email-login" required>
+  					<label for="password">Password</label>
+  					<input type="password" name="password" value="" class="input-modify col-s-8" id="password-login" pattern="[a-z0-9]{0,8}" required>
+  					<button type="submit" id="submit-login" class="submit-but col-s-3">Log in</button>
+  				</form>
+  				<p>You don’t have an account?<button id="link-sign"> Click here to sign up</button></p>
+  			</div>
+  		</article>
+  		<!-- ----------END LOG IN----------- -->
+  	</div>
+  	<!-- ----------LOG OUT----------- -->
+  	<div id="registered">
+  		<article class="popup col-s-6" id="logout-popup">
+  			<div class="title-exit">
+  				<h3>Log out</h3>
+  				<button type="button" name="exit" class="exit-button">x</button>
+  			</div>
+  			<div class="inputs">
+  				<form class="profile-info">
+  					<p>Are you sure you want to log out?</p>
+  					<button type="submit" id="stay" class="submit-but col-s-3">Stay signed</button>
+  					<button type="submit" id="logout" class="submit-but col-s-3">Log out</button>
+  				</form>
+  			</div>
+  		</article>
+  	</div>
         <!-- ----------END LOG IN----------- -->
     </div>
     <div id="registered">
