--- a/my_exp.html
+++ b/my_exp.html
@@ -58,7 +58,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -125,9 +125,22 @@
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
 			<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
-			<nav class='col-s-5 col-3' id='log-sign-frm'>
-				<button class="col-t-5" id='sign-btn'>Sign up</button>
-				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
+			<nav class='col-s-5 col-4' id='log-sign-frm'>
+				<div id="main-bts" class="col-s-12">
+					<button class="col-t-5" id='sign-btn'>Sign up</button>
+					<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
+				</div>
+				<div id="registered-bts" class="col-s-12">
+					<img src="images/email%201.png" class="image_message" id="image_mes">
+					<div class="col-s-5 col-4">
+						<p class="col-s-8 text_username" id="username_show"></p>
+						<img src="images/user.png">
+					</div>
+					<div class="col-s-5 col-8">
+						<button class="col-s-12 col-5" id='profile-btn'>Profile</button>
+						<button class="col-s-12 col-5" id='log-out-btn'>Log out</button>
+					</div>
+				</div>
 			</nav>
 		</div>
 		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
@@ -171,17 +184,17 @@
 			<form class="sign-info profile-info" id="signup-popup">
 				<div id="left" class="col-s-8">
 					<label for="name">Name</label>
-					<input type="text" name="name" value="" class="input-sign col-s-8" id="name">
+					<input type="text" name="name" value="" class="input-sign col-s-8" id="name" required>
 					<label for="username">Username</label>
-					<input type="text" name="username" value="" class="input-sign col-s-8" id="username">
+					<input type="text" name="username" value="" class="input-sign col-s-8" id="username" required>
 					<label for="email">Email Address</label>
-					<input type="text" name="email" value="" class="input-sign col-s-8" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]">
+					<input type="text" name="email" value="" class="input-sign col-s-8" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]" required>
 					<label for="birth">New Birth Date</label>
 					<input type="date" name="birth" class="input-sign col-s-8" id="birth">
 					<label for="password">Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}">
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}" required>
 					<label for="password-confirm">Confirm Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}">
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}" required>
 				</div>
 				<div id="right" class="col-s-3">
 					<img src="images/default_pfp.png" alt="current picture" class="col-s-6">
@@ -226,9 +239,9 @@
 			<div class="inputs">
 				<form class="profile-info">
 					<label for="email">Email</label>
-					<input type="email" name="email" value="" class="input-modify col-s-8" id="email-login">
+					<input type="email" name="email" value="" class="input-modify col-s-8" id="email-login" required>
 					<label for="password">Password</label>
-					<input type="password" name="password" value="" class="input-modify col-s-8" id="password-login" pattern="[a-z0-9]{0,8}">
+					<input type="password" name="password" value="" class="input-modify col-s-8" id="password-login" pattern="[a-z0-9]{0,8}" required>
 					<button type="submit" id="submit-login" class="submit-but col-s-3">Log in</button>
 				</form>
 				<p>You don’t have an account?<button id="link-sign"> Click here to sign up</button></p>
@@ -236,13 +249,8 @@
 		</article>
 		<!-- ----------END LOG IN----------- -->
 	</div>
+	<!-- ----------LOG OUT----------- -->
 	<div id="registered">
-		<img src="images/user.png">
-		<p id="username_show"></p>
-		<article class="popup col-s-10" id="profile-page">
-			//show profile page
-		</article>
-
 		<article class="popup col-s-6" id="logout-popup">
 			<div class="title-exit">
 				<h3>Log out</h3>
@@ -257,6 +265,7 @@
 			</div>
 		</article>
 	</div>
+	<!-- ---------- END POP UPS----------- -->
 
 	<!-- ---------- MESSAGES -------- -->
 
@@ -267,45 +276,44 @@
 		</div>
 		<div id="inside-messages">
 			<div id="your-chats" class="col-s-11 col-t-11 col-3">
-	      <h3>Your chats</h3>
-	      <div id="chats" class="">
-	        <article class="chat-person" id="default-person">
-	          <p class="date-chat" id="date-chat">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
-	        </article>
-	        <article class="chat-person" id="selected-chat">
-	          <p class="date-chat" id="date-chat">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
-	        </article>
-	      </div>
-	    </div>
-	    <div id="chat" class="col-s-11 col-t-11 col-8">
-	      <div id="title-chat">
-	        <h3 id="main-chat">Default name</h3>
-	        <img id="profile-chat" src="images/default_pfp.png" alt="default picture">
-	      </div>
-	      <hr id="horizontal">
-	      <div id="in-messages">
-	        <div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
-	          <p class="message-date-small" id="message-date">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	        <div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
-	          <p class="message-date-small" id="message-date">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	      </div>
-	      <div class="col-s-9 comment-frm">
-	        <input type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
-	        <img class="send-btn" src="images/send.png" alt="send message">
-	      </div>
-	    </div>
+				<h3>Your chats</h3>
+				<div id="chats" class="">
+					<article class="chat-person" id="default-person">
+						<p class="date-chat" id="date-chat">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+					</article>
+					<article class="chat-person" id="selected-chat">
+						<p class="date-chat" id="date-chat">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+					</article>
+				</div>
+			</div>
+			<div id="chat" class="col-s-11 col-t-11 col-8">
+				<div id="title-chat">
+					<h3 id="main-chat">Default name</h3>
+					<img id="profile-chat" src="images/default_pfp.png" alt="default picture">
+				</div>
+				<hr id="horizontal">
+				<div id="in-messages">
+					<div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
+						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+					<div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
+						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+				</div>
+				<div class="col-s-9 comment-frm">
+					<input type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
+					<img class="send-btn" src="images/send.png" alt="send message">
+				</div>
+			</div>
 		</div>
 	</article>
-
-	<!-- ---------- END POP UPS----------- -->
+	<!-- ----------END MESSAGES -------- -->
 	<section>
 		<div id="section">
 			<h2>My Experiences</h2>
