--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<label for="hidden" id="input-label">Select picture</label>
 					<label for="interest">Interests</label>
 					<form class="profile-info">
-						<div class="sub-in col-s-9 col-t-9 col-9" id="in-2-2">
+						<div class="col-s-9 col-t-9 col-9">
 							<label for="inter1" class="label-int">Interest 1</label>
 							<select name="inter1" id="interest-1" class="col-s-7 col-t-7 col-7">
 								<option selected disabled hidden></option>
@@ -113,7 +113,7 @@
 								<option value="religious">Religious</option>
 							</select>
 						</div>
-						<div class="sub-in col-s-9 col-t-9 col-9">
+						<div class="col-s-9 col-t-9 col-9">
 							<label for="inter2" class="label-int">Interest 2</label>
 							<select name="inter2" id="interest-2" class="col-s-7 col-t-7 col-7">
 								<option selected disabled hidden></option>
@@ -130,7 +130,7 @@
 								<option value="religious">Religious</option>
 							</select>
 						</div>
-						<div class="sub-in col-s-9 col-t-9 col-9">
+						<div class="col-s-9 col-t-9 col-9">
 							<label for="inter3" class="label-int">Interest 3</label>
 							<select name="inter3" id="interest-3" class="col-s-7 col-t-7 col-7">
 								<option selected disabled hidden></option>
@@ -147,7 +147,7 @@
 								<option value="religious">Religious</option>
 							</select>
 						</div>
-						<div class="sub-in col-s-9 col-t-9 col-9">
+						<div class="col-s-9 col-t-9 col-9">
 							<label for="inter4" class="label-int">Interest 4</label>
 							<select name="inter4" id="interest-4" class="col-s-7 col-t-7 col-7">
 								<option selected disabled hidden></option>
@@ -164,7 +164,7 @@
 								<option value="religious">Religious</option>
 							</select>
 						</div>
-						<div class="sub-in col-s-9 col-t-9 col-9">
+						<div class="col-s-9 col-t-9 col-9">
 							<label for="inter5" class="label-int">Interest 5</label>
 							<select name="inter5" id="interest-5" class="col-s-7 col-t-7 col-7">
 								<option selected disabled hidden></option>
