--- a/profile.html
+++ b/profile.html
@@ -294,17 +294,17 @@
 			<button type="button" name="change-pfp" class="big-button col-s-6 col-t-6 col-5" id="change-pfp-begin">Change profile picture</button>
 			<div id="profile-data" class="col-10">
 				<p>Name:</p>
-				<p id="name" class="default">Default name</p>
+				<p id="name_prof" class="default"></p>
 				<p>Username:</p>
-				<p id="username" class="default">Default username</p>
+				<p id="username_prof" class="default">Default username</p>
 				<p>Email:</p>
-				<p id="email" class="default">Default email</p>
+				<p id="email_prof" class="default">Default email</p>
 				<p>Date of birth:</p>
-				<p id="birth" class="default">Default date of birth</p>
+				<p id="birth_prof" class="default">Default date of birth</p>
 				<p id="interests-p">Interests:</p>
 				<div id="interests">
 					<div class="column">
-						<article class="interest" id="default-interest-profile">
+						<article class="interest" id="int-1">
 							<a href="#">Interest 1</a>
 						</article>
 						<article class="interest" id="int-2">
