--- a/experience_bali.html
+++ b/experience_bali.html
@@ -95,28 +95,92 @@
 					<input type="file" id="hidden" class="input-sign" name="change picture">
 					<label for="hidden" id="input-label">Select picture</label>
 					<label for="interest">Interests</label>
-					<div id="interests-remove">
-						<div class="interest-to-choose" id="default-interest">
-							<p>Interest 1</p>
-						</div>
-					</div>
 					<form class="profile-info">
-						<label for="inter">Choose an interest to add</label>
-						<select name="inter" id="new-interest" class="col-s-5">
-							<option selected disabled hidden></option>
-							<option value="beach">Beach</option>
-							<option value="exotic">Exotic</option>
-							<option value="city">City</option>
-							<option value="europe">Europe</option>
-							<option value="africa">Africa</option>
-							<option value="america">America</option>
-							<option value="asia">Asia</option>
-							<option value="forest">Forest</option>
-							<option value="islands">Islands</option>
-							<option value="budhist">Budhist</option>
-							<option value="religious">Religious</option>
-						</select>
-						<button id="interest-btn">Add interest</button>
+						<div class="col-s-9 col-t-9 col-9">
+							<label for="inter1" class="label-int">Interest 1</label>
+							<select name="inter1" id="interest-1" class="col-s-7 col-t-7 col-7">
+								<option selected disabled hidden></option>
+								<option value="beach">Beach</option>
+								<option value="exotic">Exotic</option>
+								<option value="city">City</option>
+								<option value="rurope">Europe</option>
+								<option value="africa">Africa</option>
+								<option value="america">America</option>
+								<option value="asia">Asia</option>
+								<option value="forest">Forest</option>
+								<option value="islands">Islands</option>
+								<option value="budhist">Budhist</option>
+								<option value="religious">Religious</option>
+							</select>
+						</div>
+						<div class="col-s-9 col-t-9 col-9">
+							<label for="inter2" class="label-int">Interest 2</label>
+							<select name="inter2" id="interest-2" class="col-s-7 col-t-7 col-7">
+								<option selected disabled hidden></option>
+								<option value="beach">Beach</option>
+								<option value="exotic">Exotic</option>
+								<option value="city">City</option>
+								<option value="europe">Europe</option>
+								<option value="africa">Africa</option>
+								<option value="america">America</option>
+								<option value="asia">Asia</option>
+								<option value="forest">Forest</option>
+								<option value="islands">Islands</option>
+								<option value="budhist">Budhist</option>
+								<option value="religious">Religious</option>
+							</select>
+						</div>
+						<div class="col-s-9 col-t-9 col-9">
+							<label for="inter3" class="label-int">Interest 3</label>
+							<select name="inter3" id="interest-3" class="col-s-7 col-t-7 col-7">
+								<option selected disabled hidden></option>
+								<option value="beach">Beach</option>
+								<option value="exotic">Exotic</option>
+								<option value="city">City</option>
+								<option value="rurope">Europe</option>
+								<option value="africa">Africa</option>
+								<option value="america">America</option>
+								<option value="asia">Asia</option>
+								<option value="forest">Forest</option>
+								<option value="islands">Islands</option>
+								<option value="budhist">Budhist</option>
+								<option value="religious">Religious</option>
+							</select>
+						</div>
+						<div class="col-s-9 col-t-9 col-9">
+							<label for="inter4" class="label-int">Interest 4</label>
+							<select name="inter4" id="interest-4" class="col-s-7 col-t-7 col-7">
+								<option selected disabled hidden></option>
+								<option value="beach">Beach</option>
+								<option value="exotic">Exotic</option>
+								<option value="city">City</option>
+								<option value="europe">Europe</option>
+								<option value="africa">Africa</option>
+								<option value="america">America</option>
+								<option value="asia">Asia</option>
+								<option value="forest">Forest</option>
+								<option value="islands">Islands</option>
+								<option value="budhist">Budhist</option>
+								<option value="religious">Religious</option>
+							</select>
+						</div>
+						<div class="col-s-9 col-t-9 col-9">
+							<label for="inter5" class="label-int">Interest 5</label>
+							<select name="inter5" id="interest-5" class="col-s-7 col-t-7 col-7">
+								<option selected disabled hidden></option>
+								<option value="beach">Beach</option>
+								<option value="exotic">Exotic</option>
+								<option value="city">City</option>
+								<option value="europe">Europe</option>
+								<option value="africa">Africa</option>
+								<option value="america">America</option>
+								<option value="asia">Asia</option>
+								<option value="forest">Forest</option>
+								<option value="islands">Islands</option>
+								<option value="budhist">Budhist</option>
+								<option value="religious">Religious</option>
+							</select>
+						</div>
 					</form>
 				</div>
 			</form>
