my exp final final final

--- a/my_exp.html
+++ b/my_exp.html
@@ -391,7 +391,7 @@
 						<div class="img-remove">
 							<img src="images/prague_pic_1.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp_coll(this)">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp(this)">x</button>
 								<label class="b-contain">
 									<input type="checkbox" onclick="showAddColl(this)">
 									<div class="b-input"></div>
@@ -415,7 +415,7 @@
 						<div class="img-remove">
 							<img src="images/bali_pic_2.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp_coll(this)">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" onclick="delete_exp(this)">x</button>
 								<label class="b-contain">
 									<input type="checkbox" onclick="showAddColl(this)">
 									<div class="b-input"></div>
@@ -447,7 +447,7 @@
 						<img src="images/prague_pic_1.png" alt="" class="center-img">
 						<img src="images/bali_pic_2.png" alt="" class="side-img-2">
 						<div class="remove-select">
-							<button type="button" name="remove-collection" class="remove remove-coll" onclick="delete_exp_coll(this)">x</button>
+							<button type="button" name="remove-collection" class="remove remove-coll" onclick="delete_coll(this)">x</button>
 						</div>
 					</div>
 					<h3 class="title-exp default-tit">Prague and Bali</h3>
