--- a/my_exp.html
+++ b/my_exp.html
@@ -73,7 +73,7 @@
 					<input id="image-input-exp" type="file" class="hidden" name="image"/>
 				  <p class="col-s-7 col-t-7 col-7">Select Image</p>
 				</label>
-				<button type="submit" name="modify-prof" id="submit-mod" class="submit-but col-s-3 col-t-3 col-3">Submit</button>
+				<button type="submit" name="add-experience" class="submit-but col-s-3 col-t-3 col-3">Submit</button>
 			</form>
 		</div>
 	</article>
