--- a/profile.html
+++ b/profile.html
@@ -305,7 +305,7 @@
 			<button type="button" name="exit" class="exit-button">x</button>
 		</div>
 		<div class="inputs">
-			<form class="profile-info">
+			<form class="profile-info" id="form-profile-info">
 				<label for="username">New Username</label>
 				<input type="text" name="username" value="" class="input-modify col-s-8" id="form-username">
 				<label for="email">New Email Address</label>
