--- a/plan.html
+++ b/plan.html
@@ -18,19 +18,19 @@
 	<div id='header-main' class='col-t-12 col-s-12 col-12'>
 		<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 		<img class="col-s-2 col-3" id='logo' src="images/logo.png">
-		<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
-		<nav class='col-s-5 col-4' id='log-sign-frm'>
+		<h2 class='col-s-5 col-4' id='head-title'>Travelust</h2>
+		<nav class='col-s-5 col-6' id='log-sign-frm'>
 			<div id="main-bts" class="col-s-12">
 				<button class="col-t-5" id='sign-btn'>Sign up</button>
 				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 			</div>
 			<div id="registered-bts" class="col-s-12">
-				<img src="images/email%201.png" class="image_message" id="image_mes">
-				<div class="col-s-5 col-4">
-					<p class="col-s-8 text_username" id="username_show"></p>
+				<div id="pfp-user" class="col-s-9 col-t-7 col-3">
+					<img src="images/email%201.png" class="image_message" id="image_mes">
+					<p class="text_username" id="username_show"></p>
 					<img src="images/user.png">
 				</div>
-				<div class="col-s-5 col-8">
+				<div id="prf-out" class="col-t-3 col-6">
 					<button class="col-s-12 col-5" id='profile-btn'>Profile</button>
 					<button class="col-s-12 col-5" id='log-out-btn'>Log out</button>
 				</div>
@@ -46,6 +46,10 @@
 		<nav id='log-sign-in-menu'>
 			<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
 			<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
+		</nav>
+		<nav id="prf-out-in-menu">
+			<button class="col-s-5" id='profile-btn-in-menu'>Profile</button>
+			<button class="col-s-5" id='log-out-btn-in-menu'>Log out</button>
 		</nav>
 	</nav>
 	<nav id='search-bar' class='col-t-3 col-4'>
