--- a/experience_bali.html
+++ b/experience_bali.html
@@ -327,6 +327,12 @@
 			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<p/>
 			<br>
 			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
+			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<p/>
+			<br>
+			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
+			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<p/>
+			<br>
+			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
 		</article>
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
