--- a/experience_cies.html
+++ b/experience_cies.html
@@ -328,6 +328,9 @@
 			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
 			<br>
 			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
+			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
+			<br>
+			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
 		</article>
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
