--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -140,7 +140,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -331,18 +331,18 @@
 		<div id="interests-remove">
 			<div class="interest-to-choose" id="default-interest">
 				<p>Interest 1</p>
-				<button type="button" name="button" class="big-button small">Delete Interest</button>
+				<button type="button" name="button" class="big-button small delete-interest-modify">Delete Interest</button>
 			</div>
 		</div>
 		<div class="inputs">
-			<form class="profile-info change-things">
+			<form class="profile-info change-things" id="new-interest-form">
 				<label for="inter" id="label-int">Choose an interest to add</label>
-				<select name="inter" id="new-interest" class="col-s-5">
+				<select name="inter" id="new-interest-form-new" class="new-interest-profile col-s-5">
 					<option selected disabled hidden></option>
 				  <option value="beach">Beach</option>
 				  <option value="exotic">Exotic</option>
 				  <option value="city">City</option>
-				  <option value="rurope">Europe</option>
+				  <option value="europe">Europe</option>
 					<option value="africa">Africa</option>
 				  <option value="america">America</option>
 				  <option value="asia">Asia</option>
