--- a/about_us.html
+++ b/about_us.html
@@ -109,7 +109,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -143,7 +143,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
