--- a/my_exp.html
+++ b/my_exp.html
@@ -41,7 +41,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -213,7 +213,7 @@
 								<option value="beach">Beach</option>
 								<option value="exotic">Exotic</option>
 								<option value="city">City</option>
-								<option value="rurope">Europe</option>
+								<option value="europe">Europe</option>
 								<option value="africa">Africa</option>
 								<option value="america">America</option>
 								<option value="asia">Asia</option>
@@ -247,7 +247,7 @@
 								<option value="beach">Beach</option>
 								<option value="exotic">Exotic</option>
 								<option value="city">City</option>
-								<option value="rurope">Europe</option>
+								<option value="europe">Europe</option>
 								<option value="africa">Africa</option>
 								<option value="america">America</option>
 								<option value="asia">Asia</option>
