--- a/top_users.html
+++ b/top_users.html
@@ -107,7 +107,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
@@ -141,7 +141,7 @@
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
 							<option value="city">City</option>
-							<option value="rurope">Europe</option>
+							<option value="europe">Europe</option>
 							<option value="africa">Africa</option>
 							<option value="america">America</option>
 							<option value="asia">Asia</option>
