--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -281,11 +281,12 @@
 
     <section class="clearfix_about">
         <h1>About us</h1>
-        <img id='image_about' class="col-t-12 col-s-12 col-5" src="images/about_us.png">
+        <img id='image_about' class="col-t-12 col-s-12 col-5" src="images/about_us.png" alt="Shows two persons working">
         <p id="about-text" >We are a Professional trips Platform. Here we will provide you only with interesting content,. We're dedicated to providing you the best of ideas for planing your trips with a focus on dependability and sharing your ideas.. We're working to turn our passion for trips into a booming online website.and  social website We hope you enjoy traveling as much as we enjoy offering this tool to you.
             We will keep posting more important posts on my Website for all of you. Please give your support and love.
             Thanks For Visiting Our Site
             Have a nice day !</p>
+
     </section>
 
     <!-- ----------FOOTER----------- -->
